# bazel-training

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  pyproject.toml
.github/workflows/: go.yaml  java.yaml  proto.yaml  python.yaml
cmd/: BUILD.bazel  main.go
docs/: 01-build-go-with-bazel-and-gazelle.md  01-build-go-with-gazelle.md  02-build-protobuf.md  03-build-python-with-bazel.md  04-build-java-with-bazel.md  05-build-python-with-poetry.md  06-build-python-with-proto.md
go/cmd/: BUILD.bazel  main.go
go/uuid/: BUILD.bazel
java/: BUILD.bazel  README.md  settings.gradle.kts
java/app/: build.gradle.kts
java/app/src/test/java/sample/: AppTest.java
proto/: BUILD.bazel  address.proto  user.proto  zipcode.proto
python/: BUILD.bazel  main.py  user.proto
uuid/: BUILD.bazel  uuid.go
