load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library")

proto_library(
    name = "user_proto",
    srcs = [
        "address.proto",
        "user.proto",
        "zipcode.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "user_go_proto",
    importpath = "github.com/nakamasato/bazel-training/proto",
    proto = ":user_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":user_go_proto"],
    importpath = "github.com/nakamasato/bazel-training/proto",
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "user_py_proto",
    deps = [
        ":user_proto",
    ],
    visibility = ["//visibility:public"],
)
