load("@rules_python//python:defs.bzl", "py_binary")
load("@poetry//:dependencies.bzl", "dependency")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        dependency("pandas"),
        ":user_proto",
    ],
)

py_proto_library(
    name = "user_proto",
    srcs = ["user.proto"],
)
